# qmul-group-project

./: .env.example  CHANGELOG.md  README.md  REPORT.md  coordinates.json  data.json  package.yaml  tfl-app.cabal  tfl.db  users.db
docs/: Databases.html  Fetch.html  Main.html  Types.html  doc-index.html  doc-index.json  index.html  tfl-app.txt
docs/src/: Databases.html  Fetch.html  Main.html  Paths_tfl_app.html  Types.html
feedbacks/: FEEDBACK1.md  FEEDBACK2.md  IMPROVEMENT1.md  IMPROVEMENT2.md
src/: Database.hs  Databases.hs  Fetch.hs  Main.hs  Parse.hs  Types.hs
src/actions/: Journey.hs  Search.hs
src/actions/Search/: ByCoordinates.hs  ByName.hs  BySeverity.hs  Common.hs
src/utils/: Display.hs  Env.hs
