cabal-version:       2.2

name:                tfl-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tfl-app#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable tfl-app
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sqlite-simple
                     , http-client
                     , http-types
                     , http-conduit
                     , aeson
                     , bytestring
                     , text
                     , time
                     , directory
                     , split
  other-modules:       Types
                     , Fetch
                     , Parse
                     , Database
                     , Utils.Env
                     , Utils.Display
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/tfl-app
